--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Explorer helper for VeloViewer</string>
     <string name="launcher_name">VV Explorer</string>
+    <string name="btn_label_explorer">Explorer</string>
+    <string name="btn_label_rides">Rides</string>
 </resources>
