--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
         <item>Satellite streets</item>
         <item>DigitalGlobe Premium</item>
         <item>OpenCycleMap</item>
+        <item>OpenStreetMap Carto</item>
     </string-array>
     <string name="mapbox_style_bright">mapbox://styles/mapbox/bright-v9</string>
     <string-array name="map_style_values">
@@ -51,6 +52,7 @@
         <item>@string/mapbox_style_satellite_streets</item>
         <item>asset://dg_premium_style.json</item>
         <item>asset://opencyclemap_style.json</item>
+        <item>asset://openstreetmap_style.json</item>
     </string-array>
 
     <string-array name="heatmap_type_entries">
